--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
 SQLAlchemy==2.0.28
 Werkzeug==3.0.1
 Jinja2==3.1.3
 itsdangerous==2.1.2
-click==8.1.7 
+click==8.1.7
+python-dotenv==1.0.1 
